Please view this file on the master branch, on stable branches it's out of date.

Unreleased
* Updates certificates for Bredband2, EasyCard, Nordea DK, Nordnet, Östgötatrafiken, Osuuspankki, PayPal, Villabanken

v1.9.9.5 (2015-07-18)
* Updates certificates for Akelius Spar, Akelius Invest, Hemköp and Resurs Bank

v1.9.9.4 (2015-06-12)
* Fixes parsing of incoming payments for American Express (thanks to mhagander)
* Updates certificates for Nordnet, Avanza, Länsförsäkringar, Forex Bank, OKQ8 and Volvo Finans

v1.9.9.3 (2015-05-24)
* Updates certificates for Paypal, AmericanExpress, Svenska spel

v1.9.9.2 (2015-04-16)
* Updates certificates for AmericanExpress, MinPension, Swedbank and Sparbankerna
* Adapt to new URLs used by Ticket Rikskortet
* Fixes application crash for Samsung devices running Android 4.2

v1.9.9.1 (2015-04-09)
* Fixes application crash for Jojo accounts.
* Removes support for DinersClub due to BankId requirement.
* Fixes login issues with some PayPal accounts.

v1.9.9.0 (2015-04-02)
* Adds support for minpension.se.
* Adds option to disable auto updates while roaming.
* Removes Skandiabanken due to their new BankId requirement.
* Fixes issue with Nordnet (thanks to jonasgroth).
* Fixes crash when account is not available from widget.
* Fixes transactions for Forex Bank (thanks to jonasgroth).
* Fixes transaction issues for EspressoHouse.
* Fixes Payson balance. NOTE: Transactions not supported yet (thanks to robho).
* Fixes LockPattern crashes for Samsung Galaxy devices.
* Fixes issue with PayPal (now even supporting WWW login and transactions).
* Updates certificates for IkanoPartners
* Removes support for Sparbanken Öresund due to BankId requirement.

v1.9.8.0 (2015-02-27)
* Adds support for Bredband2's VoIP service (thanks to fredrike)
* Adds support for EspressoHouse (thanks to fredrike)
* Adds support for multiple travel cards for JoJo Reskassa
* Sets subaccounts for Avanza to hidden by default (thanks to fredrike)